--- a/src/app/modules/main/header/user/user.component.html
+++ b/src/app/modules/main/header/user/user.component.html
@@ -29,8 +29,8 @@
             </p>
         </li>
         <!-- Menu Body -->
-        <li class="user-body">
-            <div class="row">
+        <!-- <li class="user-body"> -->
+            <!-- <div class="row">
                 <div class="col-4 text-center">
                     <a [routerLink]="['/']">Followers</a>
                 </div>
@@ -40,9 +40,9 @@
                 <div class="col-4 text-center">
                     <a [routerLink]="['/']">Friends</a>
                 </div>
-            </div>
+            </div> -->
             <!-- /.row -->
-        </li>
+        <!-- </li> -->
         <!-- Menu Footer-->
         <li class="user-footer">
             <a [routerLink]="['/profile']" class="btn btn-default btn-flat">
