--- a/src/app/modules/company-select/company-select.component.html
+++ b/src/app/modules/company-select/company-select.component.html
@@ -15,5 +15,8 @@
             </div>
             <button type="submit" class="btn btn-primary btn-block">Submit</button>
         </form>
+        <p class="mt-3 mb-1 text-center">
+            <a [routerLink]="['/company-master/new-company']" class="text-center">New Company?</a>
+        </p>
     </div>
 </div>
