--- a/src/app/modules/main/header/header.component.html
+++ b/src/app/modules/main/header/header.component.html
@@ -4,12 +4,12 @@
             ><i class="fas fa-bars"></i
         ></a>
     </li>
-    <li class="nav-item d-none d-sm-inline-block">
+    <!-- <li class="nav-item d-none d-sm-inline-block">
         <a [routerLink]="['/']" class="nav-link">Home</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
         <a [routerLink]="['/blank']" class="nav-link">Contact</a>
-    </li>
+    </li> -->
 </ul>
 
 <form class="form-inline ml-3" [formGroup]="searchForm" *ngIf="false">
@@ -30,8 +30,9 @@
 
 <ul class="navbar-nav ml-auto">
     <!-- <app-messages></app-messages>
-    <app-notifications></app-notifications>
-    <app-language></app-language> -->
+    <app-notifications></app-notifications>-->
+    <!-- <app-language></app-language>  -->
+     <app-company></app-company>
     <app-user></app-user>
     <li class="nav-item">
         <button class="nav-link" (click)="onToggleControlSidebar()">
