--- a/src/app/pages/masters/account-master/new-account/new-account.component.html
+++ b/src/app/pages/masters/account-master/new-account/new-account.component.html
@@ -49,21 +49,44 @@
                                     <div class="form-group">
                                         <label for="name">Name</label>
                                         <input type="text" class="form-control" formControlName="name" id="name" placeholder="Enter Name">
+                                        <div class="text-danger" *ngIf="f['name'].touched && f['name'].invalid">
+                                            <small *ngIf="f['name'].errors?.['required']">
+                                            Name is required
+                                            </small>
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="sub_group_id">Sub Group</label>
                                         <select class="form-control" id="sub_group_id" formControlName="sub_group_id">
-                                            <option>Select Sub Group</option>
+                                            <option [ngValue]="null" disabled>
+                                                Select Sub Group
+                                            </option>
                                             <option *ngFor="let subGroup of (subGroups$ | async)" [value]="subGroup.id">
                                                 {{ subGroup.name }}
                                               </option>
                                         </select>
+                                        <div class="text-danger"
+                                            *ngIf="f['sub_group_id'].touched && f['sub_group_id'].invalid">
+                                            <small>Sub Group is required</small>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="opening_balance">Opening Balance</label>
                                         <input type="number" class="form-control" id="opening_balance" formControlName="opening_balance" placeholder="Enter Opening Balance">
+                                        <div class="text-danger"
+                                            *ngIf="f['opening_balance'].touched && f['opening_balance'].invalid">
+
+                                        <small *ngIf="f['opening_balance'].errors?.['required']">
+                                            Opening balance is required
+                                        </small>
+
+                                        <small *ngIf="f['opening_balance'].errors?.['min']">
+                                            Opening balance cannot be negative
+                                        </small>
+
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="radio">Transaction Type</label><br>
@@ -121,8 +144,22 @@
                                         <input type="text" class="form-control" id="area" formControlName="area" placeholder="Enter Area">
                                     </div>
                                     <div class="form-group">
-                                        <label for="city">City</label>
-                                        <input type="text" class="form-control" id="city" formControlName="city" placeholder="Enter City">
+                                         <label for="city">City</label>
+                                        <input type="text"
+                                                class="form-control"
+                                                id="city"
+                                                formControlName="city"
+                                                placeholder="Enter City"
+                                                [ngClass]="{'is-invalid': f['city'].touched && f['city'].invalid}">
+                                        
+                                        <div class="invalid-feedback"
+                                            *ngIf="f['city'].touched && f['city'].invalid">
+                                            
+                                            <small *ngIf="f['city'].errors?.['required']">
+                                            City is required
+                                            </small>
+
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="pincode">Pin Code</label>
